# Outify

./: .classpath  .gitignore  .gitmodules  .project  CONTRIBUTING.md  README.md  TODO  buildLibrespot.sh  gradle.properties  prepare.sh  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: nightly.yml
app/: .classpath  .classpathh  .project  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/cc/tomko/outify/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cc/tomko/outify/: AppModule.kt  AuthStorage.java  DataStoreModule.kt  Debug.java  LibrespotFfi.java  LibrespotFfi.kt  MainActivity.java  MainActivity.kt  MediaSessionConstants.kt  MyIcons.kt  OutifyApplication.java  OutifyApplication.kt  SecureStorage.java  TokenStore.java
app/src/main/java/cc/tomko/outify/core/: ApiClient.kt  AuthCallbackServer.kt  AuthManager.java  AuthManager.kt  AuthStateEvent.kt  CallbackActivity.java  Session.kt  SpAuthManager.java  SpClient.kt  UserProfile.kt
app/src/main/java/cc/tomko/outify/core/auth/: TokenResponseDto.java
app/src/main/java/cc/tomko/outify/core/model/: Album.kt  Artist.kt  Cover.kt  CurrentUserProfile.kt  Device.kt  FileId.kt  Lyrics.kt  OutifyUri.kt  Playlist.kt  Portrait.kt  Profile.kt  Track.kt
app/src/main/java/cc/tomko/outify/core/spirc/: ISpircWrapper.kt  Spirc.java  Spirc.kt  SpircController.kt  SpircWrapper.kt
app/src/main/java/cc/tomko/outify/data/: Album.kt  Artist.kt  Cover.kt  FileId.kt  Lyrics.kt  Metadata.kt  Playlist.kt  Portrait.kt  Profile.kt  SpotifyUri.kt  Track.kt
app/src/main/java/cc/tomko/outify/data/dao/: AlbumArtistDao.kt  AlbumDao.kt  AlbumTrackDao.kt  ArtistDao.kt  LikedDao.kt  LikedItemsDao.kt  PlaylistDao.kt  TrackArtistDao.kt  TrackDao.kt  TrackFileDao.kt
app/src/main/java/cc/tomko/outify/data/database/: AlbumArtistEntity.kt  AlbumEntity.kt  AlbumTrackCrossRef.kt  AlbumWithArtists.kt  AlbumWithTracks.kt  AppDatabase.kt  ArtistEntity.kt  LikedItemsEntity.kt  LikedTrackWithTrack.kt  PlaylistEntity.kt  TrackArtistEntity.kt  TrackEntity.kt  TrackFileEntity.kt  TrackFull.kt  TrackWithArtists.kt  TrackWithFiles.kt
app/src/main/java/cc/tomko/outify/data/metadata/: AlbumMetadataHelper.kt  Metadata.kt  NativeErrors.kt  NativeMetadata.kt  PlaylistMetadataHelper.kt  RateLimitException.kt  TrackMetadataHelper.kt
app/src/main/java/cc/tomko/outify/data/native/: NativeAlbum.kt  NativeArtist.kt  NativeTrack.kt
app/src/main/java/cc/tomko/outify/data/queue/: SavedQueue.kt
app/src/main/java/cc/tomko/outify/data/repository/: LikedRepository.kt  PlayerRepository.kt  SavedQueueRepository.kt  (+3 more)
app/src/main/java/cc/tomko/outify/di/: AppModule.kt
app/src/main/java/cc/tomko/outify/playback/: AudioEngine.kt  AudioFormat.java  AudioManager.java  AudioManager.kt  AudioPlayer.java  AudioPlayer.kt  PlaybackManager.kt  PlaybackStateHolder.kt  Player.kt  SessionInitializationCallback.java
app/src/main/java/cc/tomko/outify/profile/: UserProfile.java  UserProfile.kt
app/src/main/java/cc/tomko/outify/services/: MediaLibrarySessionCallback.kt  MusicService.kt  OAuthService.kt  PlaybackService.kt
app/src/main/java/cc/tomko/outify/ui/: GlobalPopupController.kt  Theme.kt
app/src/main/java/cc/tomko/outify/utils/: CoilBitmapLoader.kt  IdUtil.kt  Logger.java  Random.kt  SharedElementKey.kt
app/src/main/res/drawable/: heart_broken.xml
app/src/main/res/layout/: activity_callback.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cc/tomko/outify/: ExampleUnitTest.java
docs/: CONTRIBUTING.md
docs/modules/: app.md  ffi.md  librespot.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/librespot-api/: Cargo.toml
rust/librespot-api/src/: errors.rs  lib.rs  oauth.rs
rust/librespot-ffi/: Cargo.toml
rust/librespot-ffi/src/: debug.rs  errors.rs  lib.rs  logger.rs  method_invoker.rs  oauth.rs  outifyuri.rs  playback.rs  profile.rs  session.rs  spclient.rs  spirc.rs
rust/librespot-ffi/src/jni_impl/: metadata.rs  mod.rs  oauth.rs  playback.rs  session.rs  spclient.rs  spirc.rs
rust/librespot-ffi/src/jni_utils/: exceptions.rs  folders.rs  futures.rs  logger.rs  mod.rs  native_metadata.rs  playback.rs
rust/librespot-ffi/src/metadata/: mod.rs  playlist.rs  track.rs  user.rs
rust/librespot-ffi/src/spotify/: client.rs  error.rs  mod.rs  requests.rs  search.rs  token.rs
rust/librespot-ffi/src/spotify/requests/: album.rs  artist.rs  common.rs  devices.rs  mod.rs  pagination.rs  playlists.rs  track.rs  user.rs
(+141 files in other folders)
