[workspace]
members = [
	"librespot-ffi",
	"deps/librespot/core",
	"deps/librespot/protocol",
	"deps/librespot/metadata",
	"deps/librespot/oauth",
	"deps/librespot/playback",
#	"deps/librespot/connect",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/iTomKo/Outify"

[workspace.lints]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "allow"

