[package]
name = "librespot-api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
librespot-core = { path = "../deps/librespot/core", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-protocol = { path = "../deps/librespot/protocol", default-features = false }
librespot-metadata = { path = "../deps/librespot/metadata", default-features = false }
librespot-oauth = { path = "../deps/librespot/oauth", default-features = false, features = ["rustls-tls-native-roots"] }
#librespot-connect = { path = "../deps/librespot/connect" }

tokio = { version = "1", features = ["rt-multi-thread"] }
log = "0.4"
oauth2 = "5.0.0"
