[package]
name = "librespot-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
log = { version = "0.4.29", features = ["std"] }
num_cpus = "1.17.0"
once_cell = "1.21.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
oauth2 = "5.0.0"

librespot-core = { path = "../deps/librespot/core", default-features = false, features = ["rustls-tls-webpki-roots"] }
librespot-protocol = { path = "../deps/librespot/protocol", default-features = false }
librespot-metadata = { path = "../deps/librespot/metadata", default-features = false , features = ["rustls-tls-webpki-roots"]}
librespot-oauth = { path = "../deps/librespot/oauth", default-features = false, features = ["rustls-tls-webpki-roots"] }
librespot-playback = { path = "../deps/librespot/playback", default-features = false, features = ["android-backend"] }
librespot-connect = { path = "../deps/librespot/connect", default-features = false, fetures = ["rustls-tls-webpki-roots"]}
serde_json = "1.0.149"
serde = "1.0.228"

